Named query (#36)
* added unit tests

* named query support

* added named query

* named quey support

* named quey support

---------

Co-authored-by: Antonio Damato <adamato@Antonios-MacBook-Pro.local>